@@ -12,10 +12,6 @@ case "${host_os}" in
 				# do not use 64-bit compiler
 				ac_cv_os_cflags="-n32 -mips3 -Wl,-woff,84"
 				;;
-			gcc )	# with gcc 3.4.3 on irix-6.5, we get pte_t
-				# undefined.  So give it a dummy value.
-				ac_cv_os_cflags="-Dpte_t=u_int"
-				;;
 		esac
 		;;
 	osf[[1-3]]* )
